classDiagram
    class CPoint {
        <<struct>>
        +double x
        +double y
        +bool operator==(const CPoint& other) const
    }

    class IShape {
        <<interface>>
        +virtual double GetArea() const = 0
        +virtual double GetPerimeter() const = 0
        +virtual uint32_t GetOutlineColor() const = 0
        +virtual std:: string ToString() const = 0
        +virtual~ IShape() = default
    }

    class ISolidShape {
        <<interface>>
        +virtual uint32_t GetFillColor() const = 0
    }

    class ICanvas {
        <<interface>>
        +virtual void DrawLine(CPoint from, CPoint to, uint32_t lineColor) = 0
        +virtual void FillPolygon(const std:: vector~CPoint~ & points, uint32_t fillColor) = 0
        +virtual void DrawCircle(CPoint center, double radius, uint32_t lineColor) = 0
        +virtual void FillCircle(CPoint center, double radius, uint32_t fillColor) = 0
        +virtual~ ICanvas() = default
    }

    class ICanvasDrawable {
        <<interface>>
        +virtual void Draw(ICanvas& canvas) const = 0
        +virtual~ ICanvasDrawable() = default
    }

    class CLineSegment {
        -CPoint m_start
        -CPoint m_end
        -uint32_t m_outlineColor
        +CLineSegment(CPoint, CPoint, uint32_t)
        +double GetArea() const override
        +double GetPerimeter() const override
        +uint32_t GetOutlineColor() const override
    }

    class CRectangle {
        -CPoint m_leftTop
        -CPoint m_rightBottom
        -uint32_t m_outlineColor
        -uint32_t m_fillColor
        +CRectangle(CPoint, CPoint, uint32_t, uint32_t)
        +double GetArea() const override
        +double GetPerimeter() const override
        +uint32_t GetOutlineColor() const override
        +uint32_t GetFillColor() const override
        +void Draw(ICanvas& canvas) const override
    }

    class CCircle {
        -CPoint m_center
        -double m_radius
        -uint32_t m_outlineColor
        -uint32_t m_fillColor
        +CCircle(CPoint, double, uint32_t, uint32_t)
        +double GetArea() const override
        +double GetPerimeter() const override
        +uint32_t GetOutlineColor() const override
        +uint32_t GetFillColor() const override
        +void Draw(ICanvas& canvas) const override
    }

    class CTriangle {
        -CPoint m_v1
        -CPoint m_v2
        -CPoint m_v3
        -uint32_t m_outlineColor
        -uint32_t m_fillColor
        +CTriangle(CPoint, CPoint, CPoint, uint32_t, uint32_t)
        +double GetArea() const override
        +double GetPerimeter() const override
        +uint32_t GetOutlineColor() const override
        +uint32_t GetFillColor() const override
        +void Draw(ICanvas& canvas) const override
    }

    class CCanvas {
        -sf:: RenderWindow m_window
        +CCanvas(double, double, const std:: string&)
        +void DrawLine(CPoint, CPoint, uint32_t) override
        +void FillPolygon(const std:: vector~CPoint~ &, uint32_t) override
        +void DrawCircle(CPoint, double, uint32_t) override
        +void FillCircle(CPoint, double, uint32_t) override
        +void Display()
    }

    class ShapeParser {
        +static std:: vector~std::shared_ptr~IShape~~ Parse(std:: istream&)
    }

    class ShapeAnalyzer {
        +static std:: shared_ptr~IShape~FindMaxArea(const std::vector~std::shared_ptr~IShape~~ &)
        +static std:: shared_ptr~IShape~FindMinPerimeter(const std::vector~std::shared_ptr~IShape~~ &)
    }

    IShape <|-- ISolidShape
    ISolidShape <|-- CRectangle
    ISolidShape <|-- CCircle
    ISolidShape <|-- CTriangle
    IShape <|-- CLineSegment
    ICanvasDrawable <|.. CRectangle
    ICanvasDrawable <|.. CCircle
    ICanvasDrawable <|.. CTriangle
    ICanvas <|.. CCanvas
    CLineSegment *-- CPoint
    CRectangle *-- CPoint
    CCircle *-- CPoint
    CTriangle *-- CPoint
    ShapeParser ..> IShape
    ShapeAnalyzer ..> IShape